--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0 10px 0 10px;
 }
 
 .form {
@@ -63,6 +64,7 @@ body {
   width: 350px;
   margin-top: 10px;
   border: 1px solid #dfe1e5;
+  max-width: 100%;
   border-radius: 4px;
   padding: 15px;
 }
@@ -92,6 +94,7 @@ body {
   padding: 8px;
   border-radius: 5px;
   cursor: pointer;
+  max-width: 100%;
   align-items: center;
   justify-content: space-between;
 }
@@ -111,4 +114,10 @@ body {
   opacity: 0.6;
   height: 30px;
   width: 30px;
+}
+
+@media (max-width: 375px) {
+  .input.h-full {
+    margin-right: 0px !important;
+  }
 }
