--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 0 10px 0 10px;
+  overflow-x: hidden;
 }
 
 .form {
